force-app/main/default/objects/TrackIT__Maintenance_and_Inspection_Procedure__c/TrackIT__Maintenance_and_Inspection_Procedure__c.object-meta.xml
<CustomObject>
    <description>Stores maintenance and inspection procedures used by the maintenance and inspection transaction flows.</description>
    <label>Maintenance And Inspection Procedure</label>
    <nameField>
        <label>Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance And Inspection Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>