force-app/main/default/objects/TrackIT__Maintenance_and_Inspection_Procedure__c/fields/TrackIT__Design_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Design_Date__c</fullName>
    <label>Design Date</label>
    <type>Date</type>
</CustomField>