force-app/main/default/objects/TrackIT__Maintenance_and_Inspection_Procedure__c/fields/TrackIT__Designed_By__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Designed_By__c</fullName>
    <label>Designed By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>