force-app/main/default/objects/TrackIT__Maintenance_and_Inspection_Procedure__c/fields/TrackIT__Procedure_Detail__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Procedure_Detail__c</fullName>
    <label>Procedure Detail</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>