force-app/main/default/objects/TrackIT__Maintenance_and_Inspection_Procedure__c/fields/TrackIT__Tools_Needed__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Tools_Needed__c</fullName>
    <label>Tools Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Tools</valueSetName>
    </valueSet>
</CustomField>