force-app/main/default/objects/TrackIT__Maintenance_and_Inspection_Procedure__c/listViews/TrackIT__All_Inspection.listView-meta.xml
<ListView>
    <fullName>TrackIT__All_Inspection</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Description__c</columns>
    <columns>TrackIT__Designed_By__c</columns>
    <columns>TrackIT__Design_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TrackIT__Type__c</field>
        <operation>equals</operation>
        <value>Inspection</value>
    </filters>
    <label>All Inspection</label>
    <language>en_US</language>
</ListView>